<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewLocationFormActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:text="@string/newLocationtitle"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <EditText
                android:id="@+id/locationName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:ems="10"
                android:hint="@string/formName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/locationDescription"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/formDescription"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/longitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Longitud"
                android:inputType="numberSigned|number|numberDecimal" />

            <EditText
                android:id="@+id/latitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Latitud"
                android:inputType="numberSigned|number|numberDecimal" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="75dp" />

            <Button
                android:id="@+id/formButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onButtonClicked"
                android:text="@string/Senddata"
                app:backgroundTint="#009688" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>